--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "@vue/composition-api": "^1.0.0-rc.11",
     "install": "^0.13.0",
     "vue": "^2.6.14",
-    "vuefire": "^2.2.5"
+    "vuefire": "https://github.com/donatas-luciunas/vuefire/releases/download/patch-1/package.tar.gz"
   }
 }
